--- a/src/main/webapp/styles/header.css
+++ b/src/main/webapp/styles/header.css
@@ -152,9 +152,12 @@
     margin-right: 12%;
 }
 
-.a: {
-  color: white;
-
+.detalles-usuario {
+	position:relative;
+	float: rigth;
+	rigth: 0px;
+	
 }
+
 
 
