Cambios frontend general

--- a/src/main/webapp/styles/route.css
+++ b/src/main/webapp/styles/route.css
@@ -41,3 +41,14 @@
 	justify-content: center;
 }
 
+.btn-circle.btn-xl {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    border-radius: 35px;
+    font-size: 22px;
+
+}
+
+
+
