--- a/src/main/webapp/styles/header.css
+++ b/src/main/webapp/styles/header.css
@@ -2,6 +2,13 @@
 
 @import url("//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 
+.item-details a{
+	color:black;
+}
+
+.nav-item{
+	color:black;
+}
 
 .navbar-icon-top .navbar-nav .nav-link > .fa {
   position: relative;
