--- a/src/main/webapp/styles/profile.css
+++ b/src/main/webapp/styles/profile.css
@@ -116,6 +116,11 @@
     font-size: 22px;
 
 }
+.btn .btn-success{
+	color: white;
+	text-color: white;
+	font-color:white;
+}
 
 a:hover,a:focus{
     text-decoration: none;
