--- a/src/main/webapp/styles/profile.css
+++ b/src/main/webapp/styles/profile.css
@@ -8,7 +8,10 @@
 	border-top: 2px solid #00ACE2;
 	border-bottom: 2px solid #00ACE2;
 }
-
+.form-row{
+	margin-top: 30px;
+	
+}
 .card-header_ button{
 	font-size: 24px;
 }
