--- a/src/main/webapp/styles/common.css
+++ b/src/main/webapp/styles/common.css
@@ -47,6 +47,15 @@ span{
 	border-radius:100%
 }
 
+.rectangle{
+	width: 45px;
+    height: 15px;
+	content:'';
+	position: relative;
+	margin:40px 4px;
+	border-radius:10%
+}
+
  /**** VAR. COLORS ****/
 
 .color_pink{
@@ -87,4 +96,8 @@ span{
 
 .background_orange{
 	background-color: #FFA513;
+}
+
+.background_red{
+	background-color: #ce4848;
 }
