--- a/src/main/webapp/styles/common.css
+++ b/src/main/webapp/styles/common.css
@@ -15,8 +15,17 @@ body{
 	font-family: "Poppins", sans-serif;
 }
 
-.content{
+.title-principal{
+	color: white; 
+	text-transform: uppercase;
+	text-align: center;
+    position: relative;
+    top: -46px;
+}
+
+.content-principal{
 	margin: 0 auto;
+	width: 50%;
 }
 
 span{
