Arreglos varios front

--- a/src/main/webapp/styles/header.css
+++ b/src/main/webapp/styles/header.css
@@ -2,6 +2,14 @@
 
 @import url("//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 
+.add_search{
+	/* width: 30px;
+	height: 30px; */
+	position: relative;
+    float: right;
+    right: 28%;
+}
+
 .header_nav{
 	conten: '';
 	height: 50px;
